Implement get_dimensions() virtual function for VNC

This is used in fullscreen mode to check whether show the
scrollbars, and might lead to a corrupt fullscreen state
in some cases.

https://bugzilla.gnome.org/show_bug.cgi?id=580679